[package]
name = "bellman_ce_circuits"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Jens Ernstberger <jens.ernstberger@tum.de>",
]

[[bench]]
name = "benchmark_circuit"
harness = false

[dependencies]
pairing_ce = "0.28.5"
rand = "0.4"
rayon = "1.5"
criterion = "0.3.5"
group = "0.12.0"
ff_ce = "0.14.3"
bellman_ce = "0.3.5"
futures = "0.3.28"
pairing = "0.23.0"
ff = "0.13.0"
rust_utils = {path = "../rust_utils"}
