[package]
name = "blstrs-benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "George Kadianakis <desnacked@riseup.net>",
    "Michele Orrù <michele.orru@berkeley.edu>",
]

[[bench]]
name = "bench_blstrs"
harness = false

[dependencies]
blstrs = "0.6.1"
criterion = { version = "0.3.5" }
group = "0.12.0"
rand = "0.8.5"
pairing_lib = { version = "0.22", package = "pairing" }
