[package]
name = "curve25519-dalek-benchmarks"
version = "0.1.0"
edition = "2021"


[[bench]]
name = "bench_dalek"
harness = false


[dependencies]
criterion = "0.3.5"
rand = "0.8.5"
rayon = {version = "1.5", optional = true}
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", features = ["std", "simd_backend"] }
