[package]
name = "halo2_pse_circuits"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
#halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", version = "0.2"}
halo2_proofs = { git = "https://github.com/celer-network/halo2", version = "0.2", branch = "KZG-bench-sha256" }
halo2_gadgets = { git = "https://github.com/celer-network/halo2", version = "0.2", features = ["unstable"], branch = "KZG-bench-sha256" }
#halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }
rand = "0.8"
psutil = "3.2.2"
utilities = { path = "utilities" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
criterion = "0.4"

[[bin]]
name = "exponentiate"
path = "src/bin/exponentiate.rs"

[[bin]]
name = "sha256"
path = "src/bin/sha256.rs"

[[bench]]
name = "sha256_bench"
harness = false

[[bench]]
name = "exponentiate_bench"
harness = false
