[package]
name = "jellyfish"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-bw6-761 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = { version = "0.4.0", features = [ "asm" ] }
ark-poly = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false }
clap = { version = "4.2.2", features = ["derive"] }
csv = "1.2"
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", version = "0.3.0" }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", version = "0.3.0" }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", version = "0.3.0" }
serde = "1.0.160"
serde_json = "1.0"
sysinfo = "0.28"
num_cpus = "1.15"

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
