[package]
name = "pasta_curves-benchmarks"
version = "0.1.0"
edition = "2021"
authors = [
    "Jack Grigg <thestr4d@gmail.com>",
]

[lib]
bench = false

[[bench]]
name = "bench_pasta_curves"
harness = false

[dependencies]
group = "0.13"
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "94b454ca2f073bd6bfd39041a2b8f42afb726c7b" }
pasta_curves = "0.5"
rand = "0.8"

[dev-dependencies]
criterion = "0.4"
