[package]
name = "halo2-curves-benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "George Kadianakis <desnacked@riseup.net>",
    "Michele Orrù <michele.orru@berkeley.edu>",
    "Jens Ernstberger <jens.ernstberger@tum.de>",
]

[[bench]]
name = "bench_halo2_curves"
harness = false

[dependencies]
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', branch = "msm" }
rand = "0.8"
rayon = "1.5"
criterion = "0.3.5"
group = "0.12.0"
ff = "0.13"
futures = "0.3.28"
pasta_curves = "0.5.0"
rand_core = { version = "0.6", default-features = false }