[package]
name = "pairing-ce-benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "George Kadianakis <desnacked@riseup.net>",
    "Michele Orrù <michele.orru@berkeley.edu>",
    "Jens Ernstberger <jens.ernstberger@tum.de>",
]

[[bench]]
name = "bench_pairing_ce"
harness = false

[dependencies]
pairing_ce = "0.28.5"
rand = "0.4"
rayon = "1.5"
criterion = "0.3.5"
group = "0.12.0"
ff_ce = "0.14.3"
bellman_ce = { git = "https://github.com/tumberger/bellman-ce.git", branch = "dev" }
futures = "0.3.28"
