[package]
name = "merkle-stark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["parallel", "no_ctl"]
parallel = ["maybe_rayon/parallel"]
no_ctl = []

[dependencies]
plonky2 = { path = "../plonky2" }
plonky2_util = { path = "../util" }
anyhow = "1.0.40"
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.14"
once_cell = "1.13.0"
maybe_rayon = { path = "../maybe_rayon" }
arrayref = "0.3.6"
sha2 = { version = "0.10.2", features = ["compress"] }
generic-array = "0.14.5"

[dev-dependencies]
criterion = "0.3.5"
plonky2_field = { path = "../field" }
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "sha256_compression"
harness = false
