[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
#halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", version = "0.2"}
halo2_proofs = { git = "https://github.com/StefanosChaliasos/halo2", version = "0.2" }
halo2_gadgets = { git = "https://github.com/StefanosChaliasos/halo2", version = "0.2", features = ["unstable"] }
#halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }
rand = "0.8"
criterion = "0.4"
psutil = "3.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.7", features = ["derive"] }